# poc-tonic-streaming-1

./: Cargo.toml  build.rs
proto/: streaming.proto
src/: client.rs  server.rs
