[package]
name = "poc-tonic-streaming-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "streaming-client"
path = "src/client.rs"

[[bin]]
name = "streaming-server"
path = "src/server.rs"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
prost = "0.11"
tonic = "0.9.2"
futures = { version = "0.3", default-features = false}
tokio-stream = "0.1.14"
h2 = "0.3.18"

[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"] }
